# GeoG

./: countries.csv  geometas_data.json  geometas_http.sqlite  main.py  pyproject.toml
geometas_html_cache/: albania.html  american_samoa.html  andorra.html  argentina.html  australia.html  austria.html  bangladesh.html  belgium.html  bermuda.html  bhutan.html  bolivia.html  botswana.html  brazil.html  bulgaria.html  cambodia.html  canada.html  chile.html  china.html  christmas_island.html  colombia.html  costa_rica.html  croatia.html  curaao.html  czech_republic.html  denmark.html  dominican_republic.html  ecuador.html  estonia.html  eswatini.html  faroe_islands.html  finland.html  france.html  germany.html  ghana.html  greece.html  greenland.html  guam.html  guatemala.html  hong_kong.html  hungary.html  (+67 more)
